updating index.html to modify header and add data science skills. update css.styles accordingly with new image and class for data science skillrow

--- a/css/styles.css
+++ b/css/styles.css
@@ -106,9 +106,16 @@ p{
 
 }
 
-.programming{
+.data{
     width: 20%;
     float: left;
+    margin-right: 30px;
+    margin-top: 30px;
+}
+
+.programming{
+    width: 20%;
+    float: right;
     margin-right: 30px;
     margin-top: 30px;
 }
